Fill out titles and thesis number

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -3,14 +3,11 @@
 
 \begin{document}
 
-% TODO: Navedite broj rada.
-\thesisnumber{000}
+\thesisnumber{4942}
 
-% TODO: Navedite naslov rada.
-\title{Naslov}
+\title{Sustav za sigurno i učinkovito udaljeno izvođenje studentskih programskih vježbi}
 
-% TODO: Navedite vaše ime i prezime.
-\author{Arthur Dent}
+\author{Petar Šegina}
 
 \maketitle
 
@@ -37,8 +34,7 @@ Sažetak na hrvatskom jeziku.
 \kljucnerijeci{Ključne riječi, odvojene zarezima.}
 \end{sazetak}
 
-% TODO: Navedite naslov na engleskom jeziku.
-\engtitle{Title}
+\engtitle{Secure and Scalable Remote Execution of Students' Programming Assignments}
 \begin{abstract}
 Abstract.
 
