Add basic layout

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -1,5 +1,5 @@
 \documentclass[times, utf8, zavrsni]{fer}
-\usepackage{booktabs}
+\usepackage{booktabs,appendix}
 
 \begin{document}
 
@@ -22,8 +22,28 @@
 \chapter{Uvod}
 Uvod rada. Nakon uvoda dolaze poglavlja u kojima se obrađuje tema.
 
+\chapter{Postojeći sustavi}
+
+\chapter{Korištene tehnologije}
+
+\chapter{Sustav za sigurno i učinkovito udaljeno izvođenje studentskih programskih vježbi}
+
+\section{Logička arhitektura}
+
+\section{Ostvarenje}
+
+\chapter{Vrednovanje}
+
 \chapter{Zaključak}
 Zaključak.
+
+\begin{appendices}
+
+\chapter{Upute za postavljanje}
+
+\chapter{Upute za korištenje}
+
+\end{appendices}
 
 \bibliography{literatura}
 \bibliographystyle{fer}
