Add sections to appendices

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -41,7 +41,21 @@ Zaključak.
 
 \chapter{Upute za postavljanje}
 
+\section{Preuzimanje izvornog koda}
+
+\section{Pokretanje okoline uz pomoć alata Docker}
+
+\section{Pokretanje okoline uz pomoć alata Gradle}
+
 \chapter{Upute za korištenje}
+
+\section{Dodavanje podrške za nova izvršna okruženja}
+
+\section{Priprema izvornih datoteka za izvođenje}
+
+\section{Zakazivanje izvršavanja}
+
+\section{Dohvat rezultata izvršavanja}
 
 \end{appendices}
 
