Add future work chapter

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -154,6 +154,8 @@ Konačno, cijeli proces vrednovanja možemo opisati slijedećim koracima:
 
 \chapter{Vrednovanje}
 
+\chapter{Daljnje dorade}
+
 \chapter{Zaključak}
 Zaključak.
 
