Future work sections

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -156,6 +156,12 @@ Konačno, cijeli proces vrednovanja možemo opisati slijedećim koracima:
 
 \chapter{Daljnje dorade}
 
+\section{Vrednovanje ispisa programa}
+
+\section{Unošenje izvršnih ograničenja}
+
+\section{Korištenje Platforma-kao-Servis sustava za automatsko provizioniranje radilica}
+
 \chapter{Zaključak}
 Zaključak.
 
