--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -104,7 +104,7 @@ Prije samog opisa ostvarenja sustava dajemo kratak pregled korištenih tehnologi
 
 \subsection{Docker}
 
-Veoma pojednostavljeno, Docker{\footnote{\url{https://www.docker.com/}}} je tehnologija koja nam omogućava da u jednu crnu kutiju, osim samih izvršnih datoteka, također upakiramo i cijelu okolinu (\textit{userspace operativnog sustava}) u kojoj se naš program izvršava. Posljedica toga je da, ako želimo pokrenuti program X na svome računalu ili poslužitelju (gdje X može biti jednostavna \textit{hello-world} aplikacija ili složeni mrežni sustav), ne moramo brinuti o tome u kojem je jeziku taj program pisan te koje sve ovisnosti i preduvjete moramo zadovoljiti prije pokretanja. Docker nam omogućava da svaki program apstrahiramo na crnu kutiju sa jasno definiranim ulazima i izlazima.
+Veoma pojednostavljeno, Docker{\footnote{\url{https://www.docker.com/}}} je tehnologija koja nam omogućava da u jednu crnu kutiju, osim samih izvršnih datoteka, također upakiramo i cijelu okolinu (\textit{userspace} operativnog sustava) u kojoj se naš program izvršava. Posljedica toga je da, ako želimo pokrenuti program X na svome računalu ili poslužitelju (gdje X može biti jednostavna \textit{hello-world} aplikacija ili složeni mrežni sustav), ne moramo brinuti o tome u kojem je jeziku taj program pisan te koje sve ovisnosti i preduvjete moramo zadovoljiti prije pokretanja. Docker nam omogućava da svaki program apstrahiramo na crnu kutiju sa jasno definiranim ulazima i izlazima.
 
 Docker sve više raste u popularnosti te je za očekivati da će postati \textit{de facto} standard za postavljanje i pokretanje programa i web usluga. Unutar svog projekta ga koristimo iz istog razloga - svi mikroservisi nude svoje Docker slike kako bi se cijeli sustav jednostavnije mogao postaviti i pokrenuti. No, također ga koristimo i za pojednostavljenu izgradnju i izvršavanje studentskih rješenja, o čemu će više riječi biti kasnije.
 
@@ -114,7 +114,7 @@ Naš sustav ostvarili smo u obliku više nezavisnih mikroservisa kako bi osigura
 
 \subsection{Kotlin}
 
-Kotlin{\footnote{\url{https://kotlinlang.org/}}} je programski jezik koji se nedavno pojavio te je uzeo velikog maha u zajednici osoba koje razvijaju za platformu Android. Radi se o modernom programskom jeziku koji se (među ostalim) prevodi u Java bytekod te nudi potpunu interoperabilnost sa postojećim JVM tehnologijama.
+Kotlin{\footnote{\url{https://kotlinlang.org/}}} je programski jezik koji se nedavno pojavio te je uzeo velikog maha u zajednici osoba koje razvijaju programska rješenja za platformu Android. Radi se o modernom programskom jeziku koji se (među ostalim) prevodi u Java bytekod te nudi potpunu interoperabilnost sa postojećim JVM tehnologijama.
 
 Od prednosti nad programskim jezikom Java istaknuti ćemo sigurniji i bolji sustav tipova, jednostavniju i izražajniju sintaksu te bolju podršku za određene konstrukte funkcijskog programiranja.
 
@@ -143,13 +143,13 @@ Prije nego što možemo rješenje izvršiti, moramo prilikom generiranja Docker 
 
 Zadnja stvar koja će nas zanimati je kako je tekao proces prevođenja i izvršavanja samog programa te koji je njegov konačni ispis. Prilikom izvršavanja izvršne Docker slike, standardni izlaz programa biti će vidljiv na ekranu. No, kako bi mogli automatizirati evaluaciju te obrađivati izlaz, morat ćemo ga proslijediti na udaljenu lokaciju. To možemo ostvariti na način da prilikom izvršavanja sam program omotamo u drugi program koji će uhvatiti njegov izlaz i proslijediti ga na odgovarajuću lokaciju. No, kako želimo zadržati fleksibilnost, cilj nam je udaljenu lokaciju na koju će se slati informacije o izvršavanju na neki način parametrizirati. Izvršne Docker slike nam i to omogućuju te možemo prilikom izvršavanja slike također predati i dodatne argumente, što ćemo iskoristiti za parametriziranje udaljene lokacije na koju će se slati informacije o izvršavanju.
 
-Uzimanjem svega navedenog u obzir, koristeći izvršne Docker slike možemo dobiti \textit{nešto} koje će svojim pokretanjem rezultate izvršavanja programa poslati na neku udaljenu lokaciju. Idealni poziv takve slike bio bi:
+Uzimanjem svega navedenog u obzir, koristeći izvršne Docker slike možemo dobiti \textit{nešto} što će svojim pokretanjem rezultate izvršavanja programa poslati na neku udaljenu lokaciju. Idealni poziv takve slike bio bi:
 
 \begin{lstlisting}
 ./nesto https://mojaudaljenalokacija
 \end{lstlisting}
 
-dok će u stvarnosti izgledati ovako:
+što bi unutar sebe pokrenulo program koji vrednujemo i informacije o toku izvršavanja poslalo na udalljeno web sjedište {\textit{mojaudaljenalokacija}}. U stvarnosti će taj poziv izgledati ovako:
 
 \begin{lstlisting}[language=Bash]
 docker run --rm -it \
@@ -157,17 +157,21 @@ docker run --rm -it \
 	https://sandworm-logger/neki-tag
 \end{lstlisting}
 
+što će pokrenuti Docker sliku kreiranu za navedeni program i proslijediti pokretaču unutar nje lokaciju na koju treba poslati informacije o izvršavanju.
+
 Rezultat ovog pristupa je taj da nam nije bitno gdje se izvršavanje događa te kamo se usmjerava rezultat izvršavanja. To nam omogućava da veoma lako ostvarimo svojstvo razmjernog rasta - radilica koje će izvršavati programe možemo imati proizvoljno mnogo, a isto to možemo napraviti i sa servisima koji će skupljati informacije o izvršavanju. Ono što će nam još trebati je servis ili alat koji će se brinuti o zakazivanju izvršavanja - na kojoj će se radilici izvesti koja slika te kamo će ona proslijediti rezultat izvođenja.
 
 Konačno, cijeli proces vrednovanja možemo opisati slijedećim koracima:
 
 \begin{enumerate}
 \item Za svaki par (program, ulazna definicija) generirati izvršnu Docker sliku sa potpuno fiksiranim kontekstom izvršavanja
-\item Pokrenuti sliku na nekoj radilici sa Docker podrškom
+\item Pokrenuti sliku na nekoj radilici sa Docker podrškom - samo pokretanje će slati informacije o izvršavanju na udaljenu lokaciju
 \item Preuzeti rezultate izvršavanja sa nekog servisa za praćenje izvršavanja
 \end{enumerate}
 
-Konkretan sustav implementiran je kao skup nezavisnih alata i mikroservisa koji obavljaju gorenavedene zadaće, a biti će opisani u nastavku.
+Dodatno, ukoliko prilikom pokretanja ne navedemo udaljenu lokaciju na koju će se slati informacije o izvršavanju, možemo program pokrenuti bez funkcionalnosti skupljanja podataka. Time smo dobili crnu kutiju koja, jednom kad se pokrene, izvrši korisnički program sa jednim točno definiranim skupom podataka. Korisna posljedica je ta da smo dobili jednostavan način reprodukcije rezultata pokretanja koji ne ovisi o platformi na kojoj se program pokreće. Tako, ako student nije zadovoljan rezultatom vrednovanja svog programa, može pokrenuti generiranu sliku lokalno i uvjeriti se u ispis svog programa.
+
+Konkretan sustav ostvaren je kao skup nezavisnih alata i mikroservisa koji obavljaju navedene zadaće, a detaljnije ćemo ih opisati u nastavku.
 
 \section{Logička arhitektura}
 
